--- a/portal/style.css
+++ b/portal/style.css
@@ -1,4 +1,3 @@
-
     :root {
       --vh: 1vh;
       --bg-cream: #f4f0ea;
@@ -249,6 +248,24 @@ body {
       font-size: 13px;
       line-height: 1.4;
       word-break: break-word;
+    }
+
+    .bubble a {
+      color: inherit;
+      text-decoration: underline;
+      text-decoration-thickness: 1px;
+      text-underline-offset: 2px;
+    }
+
+    .bubble a:hover {
+      text-decoration-thickness: 2px;
+    }
+
+    .bubble img {
+      max-width: 100%;
+      border-radius: 10px;
+      display: block;
+      margin-top: 4px;
     }
 
     .bubble.other {
